monorepo.lib.msp.ProtobufConverter#integerToProtobufEnum no need to use reflection